--- a/syslog/docker-syslog-internal/conf.d/os/mbsuite.conf
+++ b/syslog/docker-syslog-internal/conf.d/os/mbsuite.conf
@@ -1,7 +1,4 @@
 ###SOURCE DESTINATION ####
-source s_net1 { 
-        udp(ip("0.0.0.0") port (11) );
-};
 destination d_mbsuite { 
         file("/var/log/os/mbsuite.log"
             perm(0644)
@@ -10,7 +7,9 @@ destination d_mbsuite {
         );
 };
 
-
+filter f_os_mbsuite {
+       match("mbsuite.wajatmaka.com", value("MESSAGE")); 
+};
 
 ## ACL ###
 log { 
