--- a/syslog/docker-syslog-nexdatacenter/docker-compose.yml
+++ b/syslog/docker-syslog-nexdatacenter/docker-compose.yml
@@ -9,29 +9,18 @@
 version: "3"
 
 services:
-
-   portainer:
-        image: portainer/portainer
-        ports:
-           - "8443:9000/tcp"
-        command: -H unix:///var/run/docker.sock
-        volumes:
-           - "portainer-data:/log/config/portainer-data"
-           - "/var/run/docker.sock:/var/run/docker.sock"
-        container_name: portainer
-   
-   ruckus-tftp:
-        image: ruckus-tftp
-        build: Docker-Images/tftp/
+   tftp-server:
+        image: tftp-server
+        build: Docker-Builds/tftp/
         ports:
            - "69:69/udp"
         volumes:
-           - "/log/networks/:/var/tftpboot"
-        container_name: ruckus-tftp
+           - "/data/tftp:/data"
+        container_name: tftp-server
 
    syslog-networks:
         image: logging.wajatmaka.com:net
-        build: Docker-Images/syslog/
+        build: Docker-Builds/syslog/
         ports:
            - "514:514/udp" #For all switch cisco
            - "5140:5140/udp" #For asa-a
@@ -39,14 +28,12 @@ services:
            - "5142:5142/udp" #For Netgear XS716T ProSAFE 16-Port 
            - "5143:5143/udp" #For Netgear GS724TPv2 ProSAFE 24-Port
         volumes:
-           - "/log/networks:/var/log/network" #logging stdout
-           - "/log/config/conf.d/networks/asa-a.conf:/etc/syslog-ng/conf.d/networks/asa-a.conf" #configuration
-           - "/log/config/conf.d/networks/switch-cisco.conf:/etc/syslog-ng/conf.d/networks/switch-cisco.conf" #configuration
-           - "/log/config/conf.d/networks/paloalto-a.conf:/etc/syslog-ng/conf.d/networks/paloalto-a.conf" #configuration
-           - "/log/config/conf.d/networks/switch-netgear-a.conf:/etc/syslog-ng/conf.d/networks/switch-netgear-a.conf" #configuration
-           - "/log/config/conf.d/networks/switch-netgear-b.conf:/etc/syslog-ng/conf.d/networks/switch-netgear-b.conf" #configuration
+           - "/data/log/networks:/var/log/network" #logging stdout
+           - "/docker/conf.d/networks/asa-a.conf:/etc/syslog-ng/conf.d/networks/asa-a.conf" #configuration
+           - "/docker/conf.d/networks/switch-cisco.conf:/etc/syslog-ng/conf.d/networks/switch-cisco.conf" #configuration
+           - "/docker/conf.d/networks/paloalto-a.conf:/etc/syslog-ng/conf.d/networks/paloalto-a.conf" #configuration
+           - "/docker/conf.d/networks/switch-netgear-a.conf:/etc/syslog-ng/conf.d/networks/switch-netgear-a.conf" #configuration
+           - "/docker/conf.d/networks/switch-netgear-b.conf:/etc/syslog-ng/conf.d/networks/switch-netgear-b.conf" #configuration
         container_name: syslog-networks
 
 
-volumes:
-  portainer-data:
