--- a/artifactory/nginx/vhost/artifactory.conf
+++ b/artifactory/nginx/vhost/artifactory.conf
@@ -3,11 +3,15 @@ ssl_certificate_key  /etc/nginx/wajatmaka.com.key;
 ssl_session_cache shared:SSL:1m;
 ssl_prefer_server_ciphers   on;
 
-
+server {
+    listen 80;
+    listen         [::]:80;
+    server_name    artifactory.wajatmaka.com;
+    return 301 https://$host$request_uri;
+}
 
 server {
   listen 443 ssl;
-  listen 80 ;
   server_name ~(?<repo>.+)\.artifactory artifactory;
 
   if ($http_x_forwarded_proto = '') {
@@ -33,3 +37,4 @@ server {
     proxy_set_header    X-Forwarded-For   $proxy_add_x_forwarded_for;
   }
 }
+
