--- a/artifactory/docker-compose.yml
+++ b/artifactory/docker-compose.yml
@@ -7,6 +7,7 @@ services:
      - 127.0.0.1:8081:8081
     volumes:
      - /data/artifactory:/var/opt/jfrog/artifactory
+     - /docker/tomcat/server.xml:/opt/jfrog/artifactory/tomcat/conf/server.xml
     environment:
      - EXTRA_JAVA_OPTIONS=-Xmx4g
     restart: always
@@ -24,6 +25,7 @@ services:
       - 443:443
     restart: always
     volumes:
+      - /docker/nginx/nginx.conf:/etc/nginx/nginx.conf
       - /docker/nginx/vhost/artifactory.conf:/etc/nginx/conf.d/default.conf
       - /docker/nginx/cert/wajatmaka.com.crt:/etc/nginx/wajatmaka.com.crt
       - /docker/nginx/cert/wajatmaka.com.key:/etc/nginx/wajatmaka.com.key
@@ -31,4 +33,5 @@ services:
 volumes:
   artifactory:
   logs:
+  opt:
 
