--- a/artifactory/nginx/vhost/artifactory.conf
+++ b/artifactory/nginx/vhost/artifactory.conf
@@ -3,38 +3,51 @@ ssl_certificate_key  /etc/nginx/wajatmaka.com.key;
 ssl_session_cache shared:SSL:1m;
 ssl_prefer_server_ciphers   on;
 
-server {
-    listen 80;
-    listen         [::]:80;
-    server_name    artifactory.wajatmaka.com;
-    return 301 https://$host$request_uri;
-}
+
 
 server {
   listen 443 ssl;
+  listen 80;
   server_name ~(?<repo>.+)\.artifactory artifactory;
-
+  
   if ($http_x_forwarded_proto = '') {
     set $http_x_forwarded_proto  $scheme;
   }
-  ## Application specific logs
-  ## access_log /var/log/nginx/artifactory-access.log timing;
-  ## error_log /var/log/nginx/artifactory-error.log;
+  
+
+  open_file_cache max=200000 inactive=20s;
+  open_file_cache_valid 30s;
+  open_file_cache_min_uses 2;
+  open_file_cache_errors on;
+  reset_timedout_connection on;
+  client_body_timeout 10;
+  send_timeout 2;
+  keepalive_timeout 30;
+  keepalive_requests 100000;
+
+   ## Application specific logs
   rewrite ^/$ /artifactory/webapp/ redirect;
   rewrite ^/artifactory/?(/webapp)?$ /artifactory/webapp/ redirect;
   rewrite ^/(v1|v2)/(.*) /artifactory/api/docker/$repo/$1/$2;
   chunked_transfer_encoding on;
   client_max_body_size 0;
+  fastcgi_buffers 8 4k;
   location /artifactory/ {
     proxy_read_timeout  900;
     proxy_pass_header   Server;
     proxy_cookie_path   ~*^/.* /;
     proxy_pass          http://artifactory:8081/artifactory/;
-      proxy_set_header    X-Artifactory-Override-Base-Url $http_x_forwarded_proto://$host:$server_port/artifactory;
+    proxy_set_header    X-Artifactory-Override-Base-Url $http_x_forwarded_proto://$host:$server_port/artifactory;
     proxy_set_header    X-Forwarded-Port  $server_port;
     proxy_set_header    X-Forwarded-Proto $http_x_forwarded_proto;
     proxy_set_header    Host              $http_host;
     proxy_set_header    X-Forwarded-For   $proxy_add_x_forwarded_for;
+    client_body_buffer_size 32k;
+    proxy_buffer_size   128k;
+    proxy_buffers   4 256k;
+    proxy_busy_buffers_size   256k;
+    fastcgi_buffer_size 128k;
+    fastcgi_buffers 4 256k;
+    fastcgi_busy_buffers_size 256k;
   }
 }
-
